# gts

./: CMakeLists.txt  LICENSE  README
examples/: example.cpp
include/gts/: bool.h  common.h  error.h  float.h  gts.h  integer.h  json.h  meta_type.h  object.h  ptree.h  string.h  xml.h  yaml.h
include/gts/details/: index_sequence.h  iterator_traits.h  static_string.h
include/gts/json/: generic_serializer.h  ptree_serializer.h  serializer.h  serializer_common.h  serializer_ptree.h
include/gts/meta_type/: array.h  common.h  dictionary.h  field.h  helpers.h  member.h  object.h
samples/: CMakeLists.txt  json_array.cpp  json_map.cpp  sample_no1.cpp
tests/: CMakeLists.txt  json_array.cpp  json_dictionary.cpp  json_object.cpp
